[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Bullet/Bullet3.png" type="Texture" id=1]
[ext_resource path="res://Player/Bullet/Bullet.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.7317
height = 40.5367

[sub_resource type="CapsuleShape2D" id=2]
radius = 45.0
height = 10.0001

[node name="Bullet" type="Area2D"]
scale = Vector2( 0.2, 0.2 )
collision_mask = 17
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.52588e-05, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 2.38419e-07, 0 )
rotation = 1.5708
scale = Vector2( 1.01085, 1 )
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=[
"Player",
]]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
